--- a/components/Header/Navigation/MobileNav/MobileNav.module.scss
+++ b/components/Header/Navigation/MobileNav/MobileNav.module.scss
@@ -1,5 +1,6 @@
 @import 'styles/mixins';
 @import 'styles/colors';
+@import 'styles/animations';
 
 $btn-size: 30px;
 $animation-step-duration: 1s;
@@ -28,7 +29,7 @@ $animation-step-duration: 1s;
     width: 100%;
     background: $color-concrete-white;
     box-shadow: 2px 2px 4px $color-dove-gray;
-    animation-name: barSlide, appear;
+    animation-name: barSlide, fadeIn;
     animation-duration: $animation-step-duration;
     z-index: 99;
 
@@ -44,23 +45,13 @@ $animation-step-duration: 1s;
                 font-size: 1.2rem;
                 text-transform: uppercase;
                 opacity: 0;
-                animation-name: appear;
+                animation-name: fadeIn;
                 animation-delay: $animation-step-duration;
                 animation-duration: $animation-step-duration;
                 animation-fill-mode: forwards;
             }
         }
     }
-}
-
-@keyframes barSlide {
-    from {transform: translateY(-100%)}
-    to {transform: translateY(0%)}
-}
-
-@keyframes appear {
-    from {opacity: 0}
-    to {opacity: 1}
 }
 
 @include breakpoint('sm') {
