--- a/components/Header/Navigation/DesktopNav/DesktopNav.module.scss
+++ b/components/Header/Navigation/DesktopNav/DesktopNav.module.scss
@@ -1,5 +1,6 @@
 @import 'styles/mixins';
 @import 'styles/colors';
+@import 'styles/fonts';
 
 .navigation {
     display: none;
@@ -16,7 +17,7 @@
 
             a {
                 color: #1a1a1a;
-                font-family: "Alata", Arial, Helvetica, sans-serif;
+                font-family: $font-alt;
                 transition: 200ms ease-in-out;
 
                 &:hover {
