--- a/components/Home/SectionCard/SectionCard.module.scss
+++ b/components/Home/SectionCard/SectionCard.module.scss
@@ -1,5 +1,7 @@
 @import 'styles/colors';
 @import 'styles/mixins';
+@import 'styles/fonts';
+@import 'styles/animations';
 
 .sectionCard {
     display: flex;
@@ -10,7 +12,7 @@
     width: 100%;
     margin-bottom: 40px;
     padding: 25px 15px;
-    font-family: 'Montserrat';
+    font-family: $font-main;
     overflow: hidden;
 
     .sectionInfo {
@@ -18,11 +20,11 @@
         padding: 40px 35px;
 
         h1 {
-            font-family: 'Alata', Arial, Helvetica, sans-serif;
+            font-family: $font-alt;
             font-size: 4.5rem;
 
             &.animated {
-                animation: appear 2s;
+                animation: appearFromTop 2s;
             }
         }
 
@@ -105,7 +107,7 @@
     }
 }
 
-@keyframes appear {
+@keyframes appearFromTop {
     0% { opacity: 0; transform: translateX(-70%)}
     100% { opacity: 1; transform: translateX(0%)}
 }
