--- a/components/ScrollToTop/ScrollToTop.module.scss
+++ b/components/ScrollToTop/ScrollToTop.module.scss
@@ -1,4 +1,5 @@
 @import 'styles/colors';
+@import 'styles/animations';
 
 $btn-size: 40px;
 $opacity-transition: opacity 0.25s;
@@ -70,22 +71,5 @@ $opacity-transition: opacity 0.25s;
         opacity: 0;
         pointer-events: none;
         z-index: 0;
-    }
-}
-
-@keyframes ringPulse {
-    0% {
-        opacity: 0.3;
-        transform: scale(1.1);
-    }
-
-    80% {
-        opacity: 0.3;
-        transform: scale(1.5);
-    }
-
-    100% {
-        opacity: 0;
-        transform: scale(1.7);
     }
 }
