Upgrade to NextJS 13, use app (beta) directory

--- a/components/Header/Navigation/MobileNav/MobileNav.module.scss
+++ b/components/Header/Navigation/MobileNav/MobileNav.module.scss
@@ -19,6 +19,11 @@ $animation-step-duration: 1s;
         width: $btn-size;
         height: $btn-size;
     }
+
+    &.isOpen {
+        opacity: 0.9;
+        transform: rotateZ(180deg)
+    }
 }
 
 .navigation {
