--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-family: var(--font-montserrat), Arial, Helvetica, sans-serif;
 }
 
 html {
